fix alignment of statistics

--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -140,3 +140,6 @@ ul.list li
   .version, .stats
     float: right
     text-align: right
+
+  .stats
+    margin-top: 0
